# draftedi-core

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CLA.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
specs/: README.md
src/draftedi/: __init__.py  parser.py  validate.py
src/draftedi.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/draftedi/spec/: README.md  __init__.py  exceptions.py  json_skeleton_provider.py  protocol.py
src/draftedi/validator/: README.md  __init__.py  core.py
tests/: conftest.py  factories.py  helpers.py  test_infra.py  test_json_skeleton_provider.py  test_parser.py  test_spec.py  test_validate.py  test_validate_edi.py  test_validator.py
tests/fixtures/: malformed_isa.edi  missing_gs.edi  sample_850.edi  sample_997.edi  truncated_file.edi
