[project]
  name = "draftedi"
  version = "1.0.0"
  description = "Production-grade X12 EDI parser for Python"
  readme = "README.md"
  license = {text = "MIT"}
  requires-python = ">=3.9"
  authors = [
      {name = "Yaw Way"},
  ]
  keywords = ["edi", "x12", "parser", "healthcare", "b2b", "integration", "ansi"]
  classifiers = [
      "Development Status :: 4 - Beta",
      "Intended Audience :: Developers",
      "License :: OSI Approved :: MIT License",
      "Operating System :: OS Independent",
      "Programming Language :: Python :: 3",
      "Programming Language :: Python :: 3.9",
      "Programming Language :: Python :: 3.10",
      "Programming Language :: Python :: 3.11",
      "Programming Language :: Python :: 3.12",
      "Programming Language :: Python :: 3 :: Only",
      "Topic :: Software Development :: Libraries :: Python Modules",
      "Topic :: Office/Business",
  ]
  dependencies = []

  [project.optional-dependencies]
  dev = [
      "pytest>=8.0",
      "pytest-cov>=5.0",
      "ruff>=0.8",
      "mypy>=1.13",
  ]

  [project.urls]
  Homepage = "https://github.com/yawway365/draftedi-core"
  Repository = "https://github.com/yawway365/draftedi-core"
  Issues = "https://github.com/yawway365/draftedi-core/issues"

  [build-system]
  requires = ["setuptools>=68.0", "wheel"]
  build-backend = "setuptools.build_meta"

  [tool.setuptools.packages.find]
  where = ["src"]

  [tool.pytest.ini_options]
  testpaths = ["tests"]
  addopts = ["--tb=short", "-q"]

  [tool.ruff]
  target-version = "py39"
  line-length = 100

  [tool.mypy]
  python_version = "3.9"
  check_untyped_defs = true